website/versioned_docs/version-2.0.0-alpha.12/react-native.md
---
id: version-2.0.0-alpha.12-react-native
title: react-native package
hide_title: true
original_id: react-native
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## react-native package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./react-native.authcontainer.md) |  |
|  [BaseAPIClient](./react-native.baseapiclient.md) |  |
|  [Container](./react-native.container.md) |  |
|  [GlobalJSONContainerStorage](./react-native.globaljsoncontainerstorage.md) |  |
|  [MFAContainer](./react-native.mfacontainer.md) |  |
|  [ReactNativeAPIClient](./react-native.reactnativeapiclient.md) |  |
|  [ReactNativeAsyncStorageStorageDriver](./react-native.reactnativeasyncstoragestoragedriver.md) |  |
|  [ReactNativeContainer](./react-native.reactnativecontainer.md) |  |
|  [SkygearError](./react-native.skygearerror.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [decodeAuthenticator(a)](./react-native.decodeauthenticator.md) |  |
|  [decodeAuthResponse(r)](./react-native.decodeauthresponse.md) |  |
|  [decodeError(err)](./react-native.decodeerror.md) |  |
|  [decodeIdentity(i)](./react-native.decodeidentity.md) |  |
|  [decodeSession(s)](./react-native.decodesession.md) |  |
|  [decodeUser(u)](./react-native.decodeuser.md) |  |
|  [encodeIdentity(i)](./react-native.encodeidentity.md) |  |
|  [encodeQuery(query)](./react-native.encodequery.md) |  |
|  [encodeQueryComponent(s)](./react-native.encodequerycomponent.md) |  |
|  [encodeUser(u)](./react-native.encodeuser.md) |  |
|  [generateOTPAuthURI(options)](./react-native.generateotpauthuri.md) |  |
|  [isMFARequiredError(e)](./react-native.ismfarequirederror.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ActivateOOBResult](./react-native.activateoobresult.md) |  |
|  [ActivateTOTPResult](./react-native.activatetotpresult.md) |  |
|  [AuthenticateWithOOBOptions](./react-native.authenticatewithooboptions.md) |  |
|  [AuthenticateWithTOTPOptions](./react-native.authenticatewithtotpoptions.md) |  |
|  [AuthenticationSession](./react-native.authenticationsession.md) |  |
|  [AuthResponse](./react-native.authresponse.md) |  |
|  [ContainerOptions](./react-native.containeroptions.md) |  |
|  [ContainerStorage](./react-native.containerstorage.md) |  |
|  [CreateNewOOBEmailOptions](./react-native.createnewoobemailoptions.md) |  |
|  [CreateNewOOBResult](./react-native.createnewoobresult.md) |  |
|  [CreateNewOOBSMSOptions](./react-native.createnewoobsmsoptions.md) |  |
|  [CreateNewTOTPOptions](./react-native.createnewtotpoptions.md) |  |
|  [CreateNewTOTPResult](./react-native.createnewtotpresult.md) |  |
|  [CustomTokenIdentity](./react-native.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./react-native.extrasessioninfooptions.md) |  |
|  [GenerateOTPAuthURIOptions](./react-native.generateotpauthurioptions.md) |  |
|  [JSONArray](./react-native.jsonarray.md) |  |
|  [JSONObject](./react-native.jsonobject.md) |  |
|  [OAuthIdentity](./react-native.oauthidentity.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./react-native.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./react-native.oauthwebredirectauthorizationurloptions.md) |  |
|  [OOBEmailAuthenticator](./react-native.oobemailauthenticator.md) |  |
|  [OOBSMSAuthenticator](./react-native.oobsmsauthenticator.md) |  |
|  [PasswordIdentity](./react-native.passwordidentity.md) |  |
|  [Session](./react-native.session.md) |  |
|  [SessionUserAgent](./react-native.sessionuseragent.md) |  |
|  [SSOLoginOptions](./react-native.ssologinoptions.md) |  |
|  [StorageDriver](./react-native.storagedriver.md) |  |
|  [TOTPAuthenticator](./react-native.totpauthenticator.md) |  |
|  [User](./react-native.user.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultContainer](./react-native.defaultcontainer.md) |  |
|  [SkygearErrorNames](./react-native.skygearerrornames.md) |  |
|  [VERSION](./react-native.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Authenticator](./react-native.authenticator.md) |  |
|  [CreateNewOOBOptions](./react-native.createnewooboptions.md) |  |
|  [Identity](./react-native.identity.md) |  |
|  [JSONValue](./react-native.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./react-native.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./react-native.skygearerrorname.md) |  |

